# feather-dmenu

./: README.md  dmenu.ml  dune  example.ml
lib/: dmenu.ml  dune
menus/: cactus_client.ml  display_menu.ml  dune  example.ml  launch_polybar.ml  niri_powermenu.ml  niri_screenshots.ml  screenshot.ml  shutdown.ml  sway_bw.ml  sway_hub.ml  sway_powermenu.ml  sway_screenshots.ml  wifi.ml
