(library
    (name feather_dmenu)
    (public_name feather-dmenu)
    (libraries feather)
    (modules dmenu)
)

(include_subdirs unqualified)

(executable
  (name example)
  (libraries feather_dmenu)
  (modules example)
)
(executable
  (name cactus_client)
  (libraries feather_dmenu)
  (modules cactus_client)
)
(executable
  (name screenshot)
  (libraries feather_dmenu)
  (modules screenshot)
)
(executable
  (name shutdown)
  (libraries feather_dmenu)
  (modules shutdown)
)
(executable
  (name sway_screenshots)
  (libraries feather_dmenu)
  (modules sway_screenshots)
)
(executable
  (name sway_powermenu)
  (libraries feather_dmenu)
  (modules sway_powermenu)
)
(executable
  (name sway_bw)
  (libraries feather_dmenu)
  (modules sway_bw)
)
(executable
  (name wifi)
  (libraries str feather_dmenu)
  (modules wifi)
)