(executables
  (names example
         cactus_client
         screenshot
         shutdown
         sway_hub
         sway_screenshots
         sway_powermenu
         sway_bw
         niri_screenshots
         niri_powermenu
         wifi
         display_menu
         launch_polybar)
  (libraries feather_dmenu str)
)
